--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ python-dateutil==2.9.0.post0
 python-louvain==0.16
 pytz==2025.2
 requests==2.32.4
+schedule==1.2.2
 scikit-learn==1.7.1
 scipy==1.16.0
 seaborn==0.13.2
