--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ packaging==25.0
 pandas==2.3.1
 pillow==11.3.0
 pyparsing==3.2.3
+pyserial==3.5
 python-dateutil==2.9.0.post0
 python-louvain==0.16
 pytz==2025.2
